2009-01-12  Till Kamppeter <till.kamppeter@gmail.com>

	* acinclude.m4: Eliminated warnings when generating ./configure

	* printer/Xerox-WorkCentre_24.xml,
	  printer/Xerox-WorkCentre_7228.xml: added new printers following
	  the PPDs in the foomatic-db-nonfree package.

	* printer/Xerox-DocuPrint_N2125PS.xml,
	  printer/Xerox-DocuPrint_N2125.xml,
	  printer/Xerox-DocuPrint_N3225PS.xml,
	  printer/Xerox-DocuPrint_N3225.xml,
	  printer/Xerox-DocuPrint_N4025PS.xml,
	  printer/Xerox-DocuPrint_N4025.xml,
	  printer/Xerox-DocuPrint_N4525PS.xml,
	  printer/Xerox-DocuPrint_N4525.xml,
	  printer/Xerox-Phaser_6120PS.xml, printer/Xerox-Phaser_6120.xml,
	  db/oldprinterids: Renamed printer entries following the PPDs in
	  the foomatic-db-nonfree package.

	* printer/Lexmark-C520.xml, printer/Lexmark-C522.xml,
	  printer/Lexmark-C524.xml, printer/Lexmark-E350d.xml,
	  printer/Lexmark-E352dn.xml, printer/Oce-cm2520.xml,
	  printer/Tektronix-Phaser_750DP.xml,
	  printer/Tektronix-Phaser_750DX.xml,
	  printer/Tektronix-Phaser_750N.xml,
	  printer/Tektronix-Phaser_750P.xml,
	  printer/Tektronix-Phaser_850DP.xml,
	  printer/Tektronix-Phaser_850DX.xml,
	  printer/Tektronix-Phaser_850N.xml,
	  printer/Xerox-DocuColor_2006.xml,
	  printer/Xerox-DocuPrint_N24.xml,
	  printer/Xerox-DocuPrint_N40.xml,
	  printer/Xerox-FaxCenter_2121.xml,
	  printer/Xerox-FaxCentre_2218.xml, printer/Xerox-Phaser_1235.xml,
	  printer/Xerox-Phaser_2135.xml, printer/Xerox-Phaser_3200MFP.xml,
	  printer/Xerox-Phaser_3400.xml, printer/Xerox-Phaser_3450.xml,
	  printer/Xerox-Phaser_3500.xml, printer/Xerox-Phaser_4400B.xml,
	  printer/Xerox-Phaser_4400DT.xml,
	  printer/Xerox-Phaser_4400DX.xml, printer/Xerox-Phaser_4400N.xml,
	  printer/Xerox-Phaser_4500B.xml, printer/Xerox-Phaser_4500DT.xml,
	  printer/Xerox-Phaser_4500DX.xml, printer/Xerox-Phaser_4500N.xml,
	  printer/Xerox-Phaser_4510B.xml, printer/Xerox-Phaser_4510DT.xml,
	  printer/Xerox-Phaser_4510DX.xml, printer/Xerox-Phaser_4510N.xml,