@@ -4,21 +4,39 @@
   <execution>
     <ghostscript/>
     <prototype>gs -q -dBATCH -dPARANOIDSAFER -dQUIET -dNOPAUSE -sDEVICE=mj500c%A%Z -sOutputFile=- -</prototype>
-    </execution>
+  </execution>
   <comments>
     <en>
-      Special japanese printer driver.
-      </en>
-    </comments>
+
+      Special japanese printer driver.&lt;p&gt;
+
+      &lt;b&gt;This driver is a candidate for being marked obsolete with
+      Gutenprint as recommended replacement.&lt;/b&gt;&lt;p&gt;
+
+      This driver was not maintained any more for longer time and is
+      &lt;a
+      href="http://bugs.ghostscript.com/show_bug.cgi?id=689595"&gt;broken
+      in current Ghostscript&lt;/a&gt;. Please use Gutenprint for
+      these printers. The Epson Stylus Color 200 is not (yet) listed
+      as supported by Gutenprint. Please try similar models, and if
+      nothing works, try similar models with the "stcolor" driver. If
+      you have found a suitable driver, preferably one which we did
+      not mark as obsolete, please tell us by reporting a bug on our
+      &lt;a href="http://bugs.linux-foundation.com/"&gt;bug tracking
+      system&lt;/a&gt;. Choose "OpenPrinting" as product and
+      "foomatic-db" as component.&lt;p&gt;
+
+    </en>
+  </comments>
   <printers>
     <printer>
       <id>printer/Epson-Stylus_Color_1500</id>
-      </printer>
-     <printer>
+    </printer>
+    <printer>
       <id>printer/Epson-Stylus_Color_200</id>
-      </printer>
-     <printer>
+    </printer>
+    <printer>
       <id>printer/Epson-Stylus_Color_IIs</id>
-      </printer>
-    </printers>
-  </driver>
+    </printer>
+  </printers>
+</driver>
