@@ -1,24 +1,33 @@
 <driver id="driver/mj6000c">
   <name>mj6000c</name>
   <url>http://www.openprinting.org/download/japanese_printers/</url>
+  <obsolete replace="gutenprint" />
   <execution>
     <ghostscript/>
     <prototype>gs -q -dBATCH -dPARANOIDSAFER -dQUIET -dNOPAUSE -sDEVICE=mj6000c%A%Z -sOutputFile=- -</prototype>
-    </execution>
+  </execution>
   <comments>
     <en>
-      Special japanese printer driver.
-      </en>
-    </comments>
+
+      Special japanese printer driver.&lt;p&gt;
+
+      This driver was not maintained any more for longer time and is
+      &lt;a
+      href="http://bugs.ghostscript.com/show_bug.cgi?id=689595"&gt;broken
+      in current Ghostscript&lt;/a&gt;. Please use Gutenprint for these
+      printers.&lt;p&gt;
+
+    </en>
+  </comments>
   <printers>
     <printer>
       <id>printer/Epson-Stylus_Color_1520</id>
-      </printer>
-     <printer>
+    </printer>
+    <printer>
       <id>printer/Epson-Stylus_Color_400</id>
-      </printer>
-     <printer>
+    </printer>
+    <printer>
       <id>printer/Epson-Stylus_Color_800</id>
-      </printer>
-    </printers>
-  </driver>
+    </printer>
+  </printers>
+</driver>
