@@ -4,18 +4,37 @@
   <execution>
     <ghostscript/>
     <prototype>gs -q -dBATCH -dPARANOIDSAFER -dQUIET -dNOPAUSE -sDEVICE=mj700v2c%A%Z -sOutputFile=- -</prototype>
-    </execution>
+  </execution>
   <comments>
     <en>
-      Special japanese printer driver.
-      </en>
-    </comments>
+
+      Special japanese printer driver.&lt;p&gt;
+
+      &lt;b&gt;This driver is a candidate for being marked obsolete with
+      "stcolor" as recommended replacement.&lt;/b&gt;&lt;p&gt;
+
+      This driver was not maintained any more for longer time and is
+      &lt;a
+      href="http://bugs.ghostscript.com/show_bug.cgi?id=689595"&gt;broken
+      in current Ghostscript&lt;/a&gt;. Please use "stcolor" for these
+      printers. They are not (yet) listed as supported by "stcolor"
+      but this driver is probably the one which will most probably
+      work. Please try similar models, especially the Epson Stylus
+      800. If you have found a suitable driver and printer model,
+      preferably one which we did not mark as obsolete, please tell us
+      by reporting a bug on our &lt;a
+      href="http://bugs.linux-foundation.com/"&gt;bug tracking
+      system&lt;/a&gt;. Choose "OpenPrinting" as product and
+      "foomatic-db" as component.&lt;p&gt;
+
+    </en>
+  </comments>
   <printers>
     <printer>
       <id>printer/Epson-MachJet</id>
-      </printer>
-     <printer>
+    </printer>
+    <printer>
       <id>printer/Epson-Stylus</id>
-      </printer>
-    </printers>
-  </driver>
+    </printer>
+  </printers>
+</driver>
