@@ -1,3 +1,14 @@
+2009-01-13  Till Kamppeter <till.kamppeter@gmail.com>
+
+	* driver/mj500c.xml, driver/mj6000c.xml, driver/mj700v2c.xml,
+	  driver/mj8000c.xml: Added warning that the MachJet drivers in
+	  current Ghostscript are
+	  broken (http://bugs.ghostscript.com/show_bug.cgi?id=689595) and
+	  a call to users of printers which are listed as supported only
+	  by these drivers to check whether there are alternative
+	  drivers. Marked "mj6000c" and "mj8000c" as obsolete with
+	  Gutenprint as recommended replacement.
+
 2009-01-12  Till Kamppeter <till.kamppeter@gmail.com>
 
 	* acinclude.m4: Eliminated warnings when generating ./configure
